[package]
name = "rjq"
version = "0.3.0"
authors = ["Anton Smolin"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/embali/rjq/"
homepage = "https://github.com/embali/rjq/"
documentation = "https://docs.rs/rjq/"
keywords = ["queue", "fifo", "job", "redis", "worker"]
categories = ["algorithms", "concurrency", "development-tools"]
description = """Redis job queue"""

[badges]
travis-ci = { repository = "embali/rjq" }

[dependencies]
error-chain = "0.12.0"
r2d2_redis = "0.9"
r2d2 = "0.8"
redis = "0.10.0"
uuid = { version = "0.7.1", features = ["v4"] }
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
